fix: handle size in RdfFormatSelector correctly

--- a/examples/index.html
+++ b/examples/index.html
@@ -29,6 +29,20 @@
     </div>
 
     <div class="mb-4">
+      <h2>RdfFormatSelector</h2>
+      <p>
+        The <code>RdfFormatSelector</code> component is a simple drop-down to select formats given as an object with the media type as key and the label as value.
+      </p>
+
+      <h3>Example</h3>
+      <div class="card">
+        <div class="card-body">
+          <div id="format-selector"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-4">
       <h2>RdfNetwork</h2>
       <p>
         The <code>RdfNetwork</code> component wraps a <a href="https://js.cytoscape.org/">Cytoscape.js</a> network visualization and translates RDF/JS objects to Cytoscape's data structures.
